--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     </form>
 
     {% if tasks|length < 1 %}
-        <h3>No tasks yet</h3>
+        <h3>____No tasks yet____</h3>
     {% else %}
 
     <!-- TASK TABLE -->
